# graph_db_test

./: .env.sample  LICENSE  get_data_from_xparser.py  main.py  pyproject.toml  test_graph.py  upsert_graphdb.py  xparser_client.py  고객센터 - 민원처리프로세스.pdf.json  고객센터 - 비대면계좌개설.pdf.json  고객센터 - 소비자보호기준.pdf.json  고객센터 - 소비자보호조직도.pdf.json  고객센터 - 수수료안내.pdf.json  고객센터 - 업무시간 안내.pdf.json  기업분석 - [대신증권 이지은][4Q25 Preview] 엔씨소프트 아이온2 이후가 보이기 시작했다.pdf.json  대신[Balance]CMA_개인_약관.pdf.json  대신[Balance]ELB 156회 - 상품설명서.pdf.json  모닝미팅 - [Morning Meeting Brief]_2026년 01월 27일.pdf.json  산업분석 - [대신증권 박혜진][Industry Report] 금융업 처음 보는 숫자, 75조원.pdf.json
